--- a/.github/workflows/azure-webapp.yml
+++ b/.github/workflows/azure-webapp.yml
@@ -10,48 +10,58 @@ env:
   PYTHON_VERSION: '3.10'
 
 jobs:
-  build:
+  build-and-deploy:
     runs-on: ubuntu-latest
 
     steps:
-      - name: Checkout code
+      - name: 📥 Checkout code
         uses: actions/checkout@v4
 
-      - name: Set up Python ${{ env.PYTHON_VERSION }}
+      - name: 🐍 Set up Python ${{ env.PYTHON_VERSION }}
         uses: actions/setup-python@v4
         with:
           python-version: ${{ env.PYTHON_VERSION }}
-          # cache: 'pip'   # remove if no requirements.txt or you want to skip caching
+          cache: 'pip'
 
-      - name: Install dependencies
+      - name: 📦 Install dependencies
         run: |
           python -m pip install --upgrade pip
           if [ -f requirements.txt ]; then pip install -r requirements.txt; fi
 
-      - name: Upload artifact for deployment
+      - name: 🔍 Verify Python version
+        run: python --version
+
+      - name: 📁 Zip application for deployment
+        run: zip -r python-app.zip .
+
+      - name: 📤 Upload zipped artifact
         uses: actions/upload-artifact@v4
         with:
           name: python-app
-          path: .
+          path: python-app.zip
 
   deploy:
     runs-on: ubuntu-latest
-    needs: build
+    needs: build-and-deploy
     environment:
       name: 'production'
       url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
-      - name: Download artifact from build job
+      - name: 📥 Download artifact from build job
         uses: actions/download-artifact@v4
         with:
           name: python-app
 
-      - name: Deploy to Azure WebApp
+      - name: 🚀 Deploy to Azure WebApp
         id: deploy-to-webapp
         uses: azure/webapps-deploy@v2
         with:
           app-name: ${{ env.AZURE_WEBAPP_NAME }}
           publish-profile: ${{ secrets.AZURE_WEBAPP_PUBLISH_PROFILE }}
-          package: .
+          package: python-app.zip
+
+      - name: 🌐 Show deployed app URL
+        run: echo "App deployed to ${{ steps.deploy-to-webapp.outputs.webapp-url }}"
+
           
